Cleaned up code and fixed some links

--- a/index.html
+++ b/index.html
@@ -10,22 +10,14 @@ permalink: /
     <amp-img src="../img/header3.jpg" width="2000" height="1120" layout="responsive" alt="Meetup photo" class="mb4 mx3"></amp-img>
   </header>
   
+  <span id="about"></span>
+
   <p class="mb4 px3">Bringing together the technologists who love transit, and the transit enthusiasts who hack!</p>
   <p class="mb4 px3">We'll have speakers present transit-related projects. Presenters may be household hackers, data scientists, researchers, product developers, or you! All presentations will be technical and awesome.</p>
   <p class="mb4 px3">Have an idea for a talk? Fill in our open call for speakers form (<a class="link" href="https://goo.gl/forms/yHRxsngEwGvJHQux2" title="https://goo.gl/forms/yHRxsngEwGvJHQux2" target="_blank">https://goo.gl/forms/yHRxsngEwGvJHQux2</a>)!</p>
   <p class="mb4 px3">Our group is inspired by the legendary DC Transportation Techies (<a class="link" href="https://www.meetup.com/Transportation-Techies/" title="https://www.meetup.com/Transportation-Techies/" target="_blank">https://www.meetup.com/Transportation-Techies/</a>) run by Michael Schade (<a class="link" href="https://twitter.com/mvs202" title="https://twitter.com/mvs202" target="_blank">https://twitter.com/mvs202</a>). We'd also like to thank Intersection (<a class="link" href="http://www.intersection.com" title="http://www.intersection.com" target="_blank">http://www.intersection.com</a>) for generously hosting us at their beautiful Hudson Yards office.</p>
-  <section class="px3 mb4">
-    <h2 class="mb2">Past Meetups</h2>
-    <ul class="mb4">
-      <li>2 bunches of strawberries</li>
-      <li>1 lemon</li>
-      <li>1 bunch of mint</li>
-      <li>1 piece of ginger chopped</li>
-      <li>1 bottle of sparkling water</li>
-    </ul>
-  </section>
   
-  <section>
+  <section id="schedule">
 
     <!-- Note: since AMP uses Mustache with braces to render dynamic content, we need to escape markdown processing here -->
     {% raw  %}
