--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@ permalink: /
 
   <p class="mb4 px3">Bringing together the technologists who love transit, and the transit enthusiasts who hack!</p>
   <p class="mb4 px3">We'll have speakers present transit-related projects. Presenters may be household hackers, data scientists, researchers, product developers, or you! All presentations will be technical and awesome.</p>
-  <p class="mb4 px3">Have an idea for a talk? Fill in our open call for speakers form (<a class="link" href="https://goo.gl/forms/yHRxsngEwGvJHQux2" title="https://goo.gl/forms/yHRxsngEwGvJHQux2" target="_blank">https://goo.gl/forms/yHRxsngEwGvJHQux2</a>)!</p>
-  <p class="mb4 px3">Our group is inspired by the legendary DC Transportation Techies (<a class="link" href="https://www.meetup.com/Transportation-Techies/" title="https://www.meetup.com/Transportation-Techies/" target="_blank">https://www.meetup.com/Transportation-Techies/</a>) run by Michael Schade (<a class="link" href="https://twitter.com/mvs202" title="https://twitter.com/mvs202" target="_blank">https://twitter.com/mvs202</a>). We'd also like to thank Intersection (<a class="link" href="http://www.intersection.com" title="http://www.intersection.com" target="_blank">http://www.intersection.com</a>) for generously hosting us at their beautiful Hudson Yards office.</p>
+  <p class="mb4 px3">Have an idea for a talk? Fill in our open call for speakers form (<a class="link" href="https://goo.gl/forms/yHRxsngEwGvJHQux2" title="https://goo.gl/forms/yHRxsngEwGvJHQux2" target="_blank" rel="noopener">https://goo.gl/forms/yHRxsngEwGvJHQux2</a>)!</p>
+  <p class="mb4 px3">Our group is inspired by the legendary DC Transportation Techies (<a class="link" href="https://www.meetup.com/Transportation-Techies/" title="https://www.meetup.com/Transportation-Techies/" target="_blank" rel="noopener">https://www.meetup.com/Transportation-Techies/</a>) run by Michael Schade (<a class="link" href="https://twitter.com/mvs202" title="https://twitter.com/mvs202" target="_blank" rel="noopener">https://twitter.com/mvs202</a>). We'd also like to thank Intersection (<a class="link" href="http://www.intersection.com" title="http://www.intersection.com" target="_blank" rel="noopener">http://www.intersection.com</a>) for generously hosting us at their beautiful Hudson Yards office.</p>
   
   <section id="schedule">
 
@@ -32,8 +32,8 @@ permalink: /
       </div>
       <template type="amp-mustache">
       <div class="card event-item">
-        <a href="{{link}}" target="_blank"><amp-img width="100" height="100" alt="Calendar icon" src="/img/cal_icon.svg"></amp-img></a>
-        <h4><a href="{{link}}" target="_blank">{{name}}</a></h4>
+        <a href="{{link}}" target="_blank" rel="noopener"><amp-img width="100" height="100" alt="Calendar icon" src="/img/cal_icon.svg"></amp-img></a>
+        <h4><a href="{{link}}" target="_blank" rel="noopener">{{name}}</a></h4>
         <p>{{local_date}} {{local_time}}</p>
         <p>{{venue_name}}, {{venue_address_1}}, {{venue_city}}</p>
       </div>
@@ -53,8 +53,8 @@ permalink: /
       </div>
       <template type="amp-mustache">
       <div class="card event-item">
-        <a href="{{link}}" target="_blank"><amp-img width="100" height="100" alt="Calendar icon" src="/img/cal_icon.svg"></amp-img></a>
-        <h4><a href="{{link}}" target="_blank">{{name}}</a></h4>
+        <a href="{{link}}" target="_blank" rel="noopener"><amp-img width="100" height="100" alt="Calendar icon" src="/img/cal_icon.svg"></amp-img></a>
+        <h4><a href="{{link}}" target="_blank" rel="noopener">{{name}}</a></h4>
         <p>{{local_date}} {{local_time}}</p>
         <p>{{venue_name}}, {{venue_address_1}}, {{venue_city}}</p>
       </div>
