--- a/past.html
+++ b/past.html
@@ -4,8 +4,8 @@ title: Transit Techies NYC
 permalink: /past
 ---
 
-<header>
-  <h1 class="mb1 px3 pt2 section-title">Past Events</h1>
+<header class="page-header blocked center">
+  <h1 class="mb4 px3 pt2">Past Events</h1>
 </header>
 
 <section id="schedule">
