second wave style edits

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@ permalink: /
 <p class="px3">We'll have speakers present transit-related projects. Presenters may be household hackers, data scientists, researchers, product developers, or you! All presentations will be technical and awesome.</p>
 <p class="px3">Our group is inspired by the legendary <a class="link" href="https://www.meetup.com/Transportation-Techies/" title="https://www.meetup.com/Transportation-Techies/" target="_blank" rel="noopener">DC Transportation Techies</a> run by <a class="link" href="https://twitter.com/mvs202" title="https://twitter.com/mvs202" target="_blank" rel="noopener">Michael Schade</a>.
 </p>
+  <a href="https://www.meetup.com/Transit-Techies-NYC" target="_blank" rel="noopener" class="button"><button class="ampstart-btn ampstart-btn-secondary secondary-btn centered">Meetup Page</button></a>
 </section>
 
 {% include body-submit.html %}
@@ -32,9 +33,9 @@ permalink: /
 <!-- {% include body-sponsors.html %} -->
 
 <section id="past-speakers" class="center">
-  <h2>Past Speakers</h2>
-  <p>We regularly have 3-4 speakers per session.</p>
-  <a href="/past"><button class="ampstart-btn ampstart-btn-secondary">PAST EVENTS</button></a>
+  <h2 class="purple">Past Speakers</h2>
+  <p class="px3">Below is a list of people who have presented at past events. We regularly have 3-4 speakers per session.</p>
+  <a href="/past" class="button"><button class="ampstart-btn ampstart-btn-secondary secondary-btn">PAST EVENTS</button></a>
   <div id="past-speakers-container">
     {% for speaker in site.data.pastspeakers %}
     <div class="card">
@@ -60,7 +61,7 @@ permalink: /
   </div>
 </section>
 
-<section id="organizers">
+<!-- <section id="organizers">
   <p>Transit Techies NYC was started in the summer of 2018 by Tyler Green and Kohzy Koh.</p>
   <div id="past-speakers-container">
     {% for organizer in site.data.organizers %}
@@ -85,4 +86,4 @@ permalink: /
     </div>
     {% endfor %}
   </div>
-</section>
+</section> -->
