added photo collage

--- a/index.html
+++ b/index.html
@@ -27,7 +27,12 @@ permalink: /
 {% include body-submit.html %}
 
 <section id="photo-collage">
-  
+  <div class="clearfix">
+    <amp-img src="../img/gallery/ttnyc1.jpg" width="2000" height="1499" layout="responsive" alt="Meetup photo" class="sm-col sm-col-6"></amp-img>
+    <amp-img src="../img/gallery/ttnyc2.jpg" width="2000" height="1499" layout="responsive" alt="Meetup photo" class="sm-col sm-col-6"></amp-img>
+    <amp-img src="../img/gallery/ttnyc3.jpg" width="2000" height="1499" layout="responsive" alt="Meetup photo" class="sm-col sm-col-6"></amp-img>
+    <amp-img src="../img/gallery/ttnyc4.jpg" width="2000" height="1499" layout="responsive" alt="Meetup photo" class="sm-col sm-col-6"></amp-img>
+  </div>
 </section>
 
 <!-- {% include body-sponsors.html %} -->
