Added partners section

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@ permalink: /
   </div>
 </section>
 
-<!-- {% include body-sponsors.html %} -->
+{% include body-partners.html %}
 
 <section id="past-speakers" class="center">
   <h2 class="purple">Past Speakers</h2>
