--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@ permalink: /
     <div class="card">
       <span class="speaker-name">This could be you!</span>
       <br /><br />
-      <p>Want to be a speaker? <a class="link" href="https://goo.gl/forms/yHRxsngEwGvJHQux2" title="https://goo.gl/forms/yHRxsngEwGvJHQux2" target="_blank" rel="noopener">Click here to submit your idea for a talk!</a></p>
+      <p>Want to be a speaker? <a class="link" href="https://goo.gl/forms/yHRxsngEwGvJHQux2" title="https://goo.gl/forms/yHRxsngEwGvJHQux2" target="_blank" rel="noopener">Submit your idea for a talk!</a></p>
     </div>
   </div>
 </section>
