polish of index styling

--- a/404.html
+++ b/404.html
@@ -5,7 +5,7 @@ permalink: /404.html
 ---
 <article class="section-gray">
   <h1 class="center">No train with that destination could be found.</h1>
-  {% include v2-body-trainanimation.html %}
+  {% include body-trainanimation.html %}
   <br /><br /><br />
   <div class="centering-div">
     <a href="/" title="Back to home" target="_blank" rel="noopener" class="pure-button button-white button-xlarge">Back to home</a>
