--- a/past_new.html
+++ b/past_new.html
@@ -9,7 +9,7 @@ permalink: /past_new
 
 {% include v2-body-pastevents.html %}
 
-{% include v2-body-videos.html %}
+{% include body-videos.html %}
 
 <article id="schedule">
   <div class="pure-g">
@@ -20,4 +20,4 @@ permalink: /past_new
   </div>
 </article>
 
-{% include v2-body-submittalk.html %}
+{% include body-submit.html %}
