cleaned past page and cleared most of legacy stuff

--- a/404.html
+++ b/404.html
@@ -1,14 +1,15 @@
 ---
-layout: v2layout
+layout: default
 title: Not Found | Transit Techies NYC
 permalink: /404.html
 ---
-<article class="section-gray">
-  <h1 class="center">No train with that destination could be found.</h1>
+<article class="section-white">
+  <h3 class="center">No train with that destination could be found.</h3>
+	</br></br>
   {% include body-trainanimation.html %}
   <br /><br /><br />
   <div class="centering-div">
-    <a href="/" title="Back to home" target="_blank" rel="noopener" class="pure-button button-white button-xlarge">Back to home</a>
+    <a href="/" title="Back to home" target="_blank" rel="noopener" class="pure-button button-white button-white-secondary button-xlarge">Back to home</a>
   </div>
   <br /><br />
 </article>
