--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 ---
-layout: v2layout
+layout: default
 title: Transit Techies NYC
 permalink: /
 ---
@@ -35,7 +35,7 @@ permalink: /
   </div>
 </article>
 
-<article class="section-white">
+<article class="section-white" id="about">
   <div class="pure-g">
     <div class="pure-u-md-1-8"></div>
     <div class="pure-u-1 pure-u-md-3-4">
