--- a/past.html
+++ b/past.html
@@ -1,19 +1,23 @@
 ---
 layout: default
-title: Transit Techies NYC
+title: Past Events | Transit Techies NYC
 permalink: /past
 ---
+<article class="section-purple">
+  <h1 class="center">Past Events</h1>
+</article>
 
-<header class="page-header blocked center">
-  <h1>Past Events</h1>
-</header>
-
-{% include body-schedule.html %}
+{% include body-pastevents.html %}
 
 {% include body-videos.html %}
 
-<section id="past-presentations">
-{% include talks.md %}
-</section>
+<article id="schedule">
+  <div class="pure-g">
+    <div class="pure-u-md-1-4"></div>
+    <div class="pure-u-1 pure-u-md-1-2">
+      {% include talks.md %}
+    </div>
+  </div>
+</article>
 
 {% include body-submit.html %}
