Unify profile links to be personal site or LinkedIn, remove outdated socials, update footer to include attributions, and put better links on the homepage for people to get engaged.

--- a/index.html
+++ b/index.html
@@ -8,10 +8,13 @@ permalink: /
     <div class="pure-u-md-1-5"></div>
     <div class="pure-u-1 pure-u-md-3-5">
       <div class="next-event-hero">
-        <span class="next-event-callout center">This site is in archive mode. For up-to-date meetup information:</span>
-        <span class="next-event-title center">Visit the Transit Techies NYC Meetup Group</span>
+        <h1 class="center">Transit Techies NYC</h1>
+        <span class="next-event-callout center">This site is in archive mode. Visit the Transit Techies NYC meetup group for the latest information:</span>
         <div class="centering-div">
-          <a href="https://www.meetup.com/Transit-Techies-NYC/?action=join" target="_blank" rel="noopener" class="pure-button button-white button-white-primary button-xlarge">Go to Meetup Group</a></div>
+          <a href="https://www.meetup.com/transit-techies-nyc/" target="_blank" rel="noopener" class="pure-button button-white button-white-primary button-xlarge">Go to meetup group</a>
+          <a href="https://docs.google.com/forms/d/e/1FAIpQLSdUbqZXMmAWvmdoO4L8RoCw7-v20IlKj4mTHBbF74KsdwI9nA/viewform" target="_blank" rel="noopener" class="pure-button button-white button-white-primary button-xlarge">Propose a topic</a>
+          <a href="https://www.linkedin.com/in/isaacdonis/" target="_blank" rel="noopener" class="pure-button button-white button-white-primary button-xlarge">Reach out to the current organizer</a>
+        </div>
       </div>
     </div>
   </div>
